--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:background="@drawable/list_selector"
-android:orientation="horizontal"
-android:padding="0dip"
-android:id="@+id/row"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/list_selector"
+    android:orientation="horizontal"
+    android:padding="0dip"
+    android:id="@+id/row"
     >
 
 
 
-<TextView
-    android:id="@+id/row_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:text="Queued:"
-    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
-    android:textColor="@android:color/holo_blue_dark"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/row_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="Queued:"
+        android:textSize="32sp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="7dp"/>
 
+    <!--    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
+    android:textColor="@android:color/holo_blue_dark"-->
 </RelativeLayout>
